# CatServer-C-TCP-UDP

./: .gitignore  README.md  Readme.md
CatClient/: CMakeLists.txt  dns_off.sh  dns_on.sh  get_stats.sh
CatClient/libs/net/: CMakeLists.txt
CatClient/libs/net/tcptransceiver/: CMakeLists.txt
CatClient/src/: CMakeLists.txt  main.cpp
CatClient/src/clientui/: CMakeLists.txt  ClientUI.cpp  ClientUI.h
CatClient/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
CatClient/src/srvresolver/: CMakeLists.txt  SRVResolver.cpp  SRVResolver.h
CatServer/: docker-compose.yml
CatServer/catserver/: Dockerfile
CatServer/cs/: CMakeLists.txt
CatServer/cs/libs/net/tcptransceiver/: CMakeLists.txt
CatServer/cs/libs/net/tcptransceiver/include/: CMakeLists.txt
CatServer/cs/libs/net/tcptransceiver/include/tcpacceptor/: CMakeLists.txt  TCPAcceptor.h
CatServer/cs/libs/net/tcptransceiver/libs/: CMakeLists.txt
CatServer/cs/libs/net/tcptransceiver/libs/tcpserver/: CMakeLists.txt  TCPServer.cpp  TCPServer.h
CatServer/cs/libs/net/tcptransceiver/libs/tcpstream/: CMakeLists.txt  TCPStreamImpl.h
CatServer/cs/libs/net/udptransceiver/libs/: UDPTransceiver.h
CatServer/cs/src/: CMakeLists.txt  main.cpp
CatServer/cs/src/cat_service/: CMakeLists.txt  CatService.h
CatServer/cs/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
CatServer/cs/src/feed_queue/: CMakeLists.txt  FeedQueue.cpp  FeedQueue.h
CatServer/cs/src/food/: CMakeLists.txt  Food.cpp  Food.h
CatServer/cs/src/logger/: CMakeLists.txt  Logger.h
CatServer/cs/src/pet_queue/: CMakeLists.txt  PetQueue.cpp  PetQueue.h
CatServer/dns/: Dockerfile  named.conf
CatServer/dns/zones/: db.cat.local
CatServer/ftp/: Dockerfile  vsftpd.conf
CatServer/stats/: stats.csv
client/: CMakeLists.txt
client/config/: params.json
client/src/: CMakeLists.txt  main.cpp
client/src/clientui/: CMakeLists.txt  ClientUI.cpp  ClientUI.h
client/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
client/src/libs/: CMakeLists.txt
client/src/libs/udptransceiver/: CMakeLists.txt  UDPTransceiver.h
client/src/transceivers/: CMakeLists.txt  tcptransceiver
libs/: CMakeLists.txt
libs/tcptransceiver/: CMakeLists.txt
libs/tcptransceiver/include/: CMakeLists.txt
libs/tcptransceiver/include/tcpacceptor/: CMakeLists.txt  TCPAcceptor.h
libs/tcptransceiver/include/tcpconnector/: CMakeLists.txt  TCPConnector.h
libs/tcptransceiver/include/tcpstream/: CMakeLists.txt
libs/tcptransceiver/libs/: CMakeLists.txt
libs/tcptransceiver/libs/tcpclient/: CMakeLists.txt  TCPClient.cpp  TCPClient.h
libs/tcptransceiver/libs/tcpserver/: CMakeLists.txt  TCPServer.cpp  TCPServer.h
libs/tcptransceiver/libs/tcpstream/: CMakeLists.txt  TCPStreamImpl.h
libs/tests/: CMakeLists.txt  tcp_test.cpp  udp_test.cpp
libs/udptransceiver/: CMakeLists.txt
libs/udptransceiver/include/: CMakeLists.txt
libs/udptransceiver/libs/: CMakeLists.txt  UDPTransceiver.cpp
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
server/src/controller/: CMakeLists.txt  Controller.cpp  Controller.h
server/src/include/: CMakeLists.txt
server/src/include/cat/: Cat.h  (+1 more)
server/src/libs/: CMakeLists.txt  udptransceiver
server/src/libs/stateservice/: CMakeLists.txt  JSONStateService.cpp  JSONStateService.h
(+49 files in other folders)
